# layer-wise

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
api/: __init__.py  config.py  dependencies.py  main.py
api/routers/: analysis.py  report.py  upload.py
api/schemas/: __init__.py  analysis.py  report.py  upload.py
api/services/: __init__.py  file_service.py  job_store.py
engine/: __init__.py  pipeline.py
engine/analyzer/: __init__.py  analyzer.py  dataset_analyzer.py
engine/detector/: __init__.py  detector.py  domain_detector.py
engine/explainer/: __init__.py  explainer.py
engine/hyperparams/: __init__.py  hyperparams.py
engine/models/: __init__.py  dataset.py  domain.py  models.py
engine/recommender/: __init__.py  recommender.py
engine/recommender/rules/: __init__.py  rules.py
engine/strategy/: __init__.py  strategy.py
frontend/: index.html  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/hooks/: useAnalysis.ts
frontend/src/types/: index.ts
scripts/: __init__.py  analyze_dataset.py  detect_domain.py  explain.py  generate_fixtures.py  generate_freeze.py  recommend_hyperparams.py  recommend_model.py  run_pipeline.py  script_analyzer.py
tests/: conftest.py
tests/e2e/: test_frontend_placeholder.py
tests/integration/: test_api_app.py
tests/unit/: test_analyzer.py  test_dataset_analyzer.py  test_detector.py  test_domain_detector.py  test_explainer.py  test_hyperparams.py  test_models.py  test_pipeline.py  test_recommender.py  test_strategy.py
(+5 files in other folders)
